--- a/regional/templates/usa_colors.css
+++ b/regional/templates/usa_colors.css
@@ -72,6 +72,12 @@
     flex-shrink: 0;
 }
 
+.usa-country-name {
+    white-space: nowrap;
+    min-width: fit-content;
+    flex-shrink: 0;
+}
+
 .usa-flag-logo {
     width: clamp(50px, 8vw, 90px);
     height: auto;
