--- a/regional/templates/sweden_colors.css
+++ b/regional/templates/sweden_colors.css
@@ -70,12 +70,19 @@
     white-space: nowrap;
     min-width: fit-content;
     flex-shrink: 0;
+    /* Ensure proper rendering */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .sweden-country-name {
     white-space: nowrap;
     min-width: fit-content;
     flex-shrink: 0;
+    /* Additional properties to prevent wrapping */
+    display: inline-block;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .sweden-flag-logo {
