--- a/styles/app.css
+++ b/styles/app.css
@@ -2136,6 +2136,44 @@ audio::-webkit-media-controls-panel {
    POSTER GALLERY SYSTEM STYLES
    ================================================================ */
 
+/* Floating Posters Background (Philosophy Page) */
+.floating-posters-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -999;
+  overflow: hidden;
+  pointer-events: none;
+}
+
+.floating-poster {
+  position: absolute;
+  will-change: transform;
+  animation-name: floatDrift;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+@keyframes floatDrift {
+  0% {
+    transform: translate(0, 0) rotate(0deg);
+  }
+  25% {
+    transform: translate(-100px, 150px) rotate(5deg);
+  }
+  50% {
+    transform: translate(80px, -100px) rotate(-3deg);
+  }
+  75% {
+    transform: translate(-50px, 80px) rotate(4deg);
+  }
+  100% {
+    transform: translate(0, 0) rotate(0deg);
+  }
+}
+
 /* Theme Selector */
 #theme-selector {
   display: flex;
